feat(src): add base, about FP, OOP, AP

--- a/src/index.html
+++ b/src/index.html
@@ -5,5 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Design pattern</title>
   </head>
-  <body></body>
+  <body>
+    <div id="app">
+      <header></header>
+      <main>
+        <button>btn1</button>
+        <button>btn2</button>
+        <button>btn3</button>
+        <button>btn4</button>
+        <button>btn5</button>
+      </main>
+      <footer></footer>
+    </div>
+    <script src="./base/ap/index.js"></script>
+  </body>
 </html>
