feat(src/base/ap): add MyPromise Class-part1

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
       </main>
       <footer></footer>
     </div>
-    <script type="module" src="./dp/index.js"></script>
+    <script type="module" src="./index.js"></script>
     <!-- <script>
       const Image = (function() {
         const img = document.createElement("img");
